--- a/index.html
+++ b/index.html
@@ -14,10 +14,57 @@
             <div class="profile-avatar">
                 <i class="fa-solid fa-user-tie"></i>
             </div>
-            <h1>Troilus Wettin (Troy / )</h1>
+            <h1>Troilus Wettin (Troy)</h1>
             <p class="subtitle">Thám tử tư - Tokyo, Nhật Bản</p>
             
             <div class="basic-info">
+                <div class="info-item">
+                    <i class="fas fa-calendar-day"></i>
+                    <span><strong>Tuổi:</strong> 35</span>
+                </div>
+                <div class="info-item">
+                    <i class="fas fa-passport"></i>
+                    <span><strong>Quốc tịch:</strong> Đức</span>
+                </div>
+                <div class="info-item">
+                    <i class="fas fa-briefcase"></i>
+                    <span><strong>Nghề nghiệp:</strong> Thám tử tư</span>
+                </div>
+                <div class="info-item">
+                    <img src="img/capricorn-3b82f6.png" alt="Capricorn" class="zodiac-icon">
+                    <span><strong>Cung hoàng đạo:</strong> Ma Kết (Capricorn)</span>
+                </div>
+                <div class="info-item">
+                    <i class="fas fa-shapes"></i>
+                    <span><strong>MBTI:</strong> ISTP </span>
+                </div>
+                <div class="info-item">
+                    <i class="fas fa-building"></i>
+                    <span><strong>Nơi làm việc:</strong> Tokyo (văn phòng tư)</span>
+                </div>
+                <div class="info-item">
+                    <i class="fas fa-venus-mars"></i>
+                    <span><strong>Giới tính:</strong> Liên giới tính (Intersex)</span>
+                </div>
+                <div class="info-item">
+                    <i class="fas fa-ruler-vertical"></i>
+                    <span><strong>Chiều cao:</strong> 1m87</span>
+                </div> 
+                <div class="info-item">
+                    <i class="fas fa-home"></i>
+                    <span><strong>Nơi ở:</strong> Shinjuku, Tokyo</span>
+                </div>
+                <div class="info-item">
+                    <i class="fas fa-cake-candles"></i>
+                    <span><strong>Sinh nhật:</strong> 3:35AM - 15/01/1990</span>
+                </div>
+                <div class="info-item">
+                    <i class="fas fa-heart"></i>
+                    <span><strong>Tình trạng:</strong> Hẹn hò</span>
+                </div>
+                
+            </div>
+            <div class="basic-info-mobile">
                 <div class="info-item">
                     <i class="fas fa-calendar-day"></i>
                     <span><strong>Tuổi:</strong> 35</span>
