--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <span><strong>Sinh nhật:</strong> 3:35AM - 15/01/1990</span>
                 </div>
                 <div class="info-item">
-                    <i class="fas fa-heart"></i>
+                    <i class="fas fa-heart" style="color: red;"></i>
                     <span><strong>Tình trạng:</strong> Hẹn hò</span>
                 </div>
                 <div class="info-item">
