--- a/index.html
+++ b/index.html
@@ -8,9 +8,27 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css?v=1.0">
 
+    <!-- Prevent Caching -->
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
+
+    <!-- Open Graph meta tags -->
+    <meta property="og:title" content="Troilus Wettin (Troy) - Hồ sơ nhân vật">
+    <meta property="og:description" content="Thử click vào nút tròn to nhất ngay đầu trang 7 lần xem có gì nhé">
+    <meta property="og:image" content="https://yourdomain.com/assets/preview.png">
+    <meta property="og:url" content="https://Tmy-andy.github.io/Troy/">
+    <meta property="og:type" content="website">
+
+    <!-- Optional: Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Troilus Wettin (Troy) - Hồ sơ nhân vật">
+    <meta name="twitter:description" content="Thử click vào nút tròn to nhất ngay đầu trang 7 lần xem có gì nhé">
+    <meta name="twitter:image" content="https://yourdomain.com/assets/preview.png">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="img/favicon.png">
+
 </head>
 <body>
     <div class="container">
