--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Open Graph meta tags -->
     <meta property="og:title" content="Troilus Wettin (Troy) - Hồ sơ nhân vật">
     <meta property="og:description" content="Thử click vào nút tròn to nhất ngay đầu trang 7 lần xem có gì nhé">
-    <meta property="og:image" content="https://yourdomain.com/assets/preview.png">
+    <meta property="og:image" content="https://Tmy-andy.github.io/Troy/img/preview.jpg">
     <meta property="og:url" content="https://Tmy-andy.github.io/Troy/">
     <meta property="og:type" content="website">
 
@@ -24,8 +24,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Troilus Wettin (Troy) - Hồ sơ nhân vật">
     <meta name="twitter:description" content="Thử click vào nút tròn to nhất ngay đầu trang 7 lần xem có gì nhé">
-    <meta name="twitter:image" content="https://yourdomain.com/assets/preview.png">
-
+    <meta name="twitter:image" content="https://Tmy-andy.github.io/Troy/img/preview.jpg">
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="img/favicon.png">
 
