thiết kế lại hoàn toàn

--- a/index.html
+++ b/index.html
@@ -10,6 +10,26 @@
   <link href="https://fonts.googleapis.com/css2?family=Yuji+Mai&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;600;700&display=swap" rel="stylesheet">
 
+    <!-- Prevent Caching -->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+
+    <!-- Open Graph meta tags -->
+    <meta property="og:title" content="Sakuraba Yuri - Hồ sơ nhân vật">
+    <meta property="og:description" content="">
+    <meta property="og:image" content="https://Tmy-andy.github.io/Yuri/img/preview.jpg">
+    <meta property="og:url" content="https://Tmy-andy.github.io/Yuri/">
+    <meta property="og:type" content="website">
+
+    <!-- Optional: Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Sakuraba Yuri - Hồ sơ nhân vật">
+    <meta name="twitter:description" content="">
+    <meta name="twitter:image" content="https://Tmy-andy.github.io/Yuri/img/preview.jpg">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="img/favicon.png">
+
   <style>
     :root {
       --bg: #ffeaf4;
